Improve Process Managers performance with specific queries